--- a/demoapp/html/demo.css
+++ b/demoapp/html/demo.css
@@ -9,5 +9,5 @@ body {
     margin: 5em auto;
     background: white;
     border: 1px solid gray;
-    padding: 10px 30px;
+    padding: 0.5em 2em;
 }
